# esp32-serial-flasher

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  sdkconfig
doc/: 20211023 - ESP32 Flasher.docx  20220415 - notes idf esp32 oled SSD1306 hal drivers i2c U8g2.docx  20220415 - notes idf esp32 oled SSD1306 hal drivers i2c U8g2.xlsx  new 12.txt  new van gisteren main.c.txt  sdkconfig.txt
doc/icons/: test.h
doc/icons/xbm/: icon_failed.xbm  icon_progress_2_3.xbm
firmware_target/: bin2array.cmake  firmware_target.c  firmware_target.h
flashbox design/3d model/: 20220907 FlashBox.STEP  Assem1.SLDASM  Controller.SLDPRT  FlashBoxBodem.STL  FlashBoxTop.STL  Knijper.STL  Knoppie.SLDPRT  Ledje.SLDPRT  Schroefpot.STL  Voeding-5V.SLDPRT
flashbox design/components/: flashbox component list.xlsx
flashbox design/icons/xbm/: icon_completed.xbm  icon_open.xbm  icon_progress_1_3.xbm  icon_progress_3_3.xbm
main/: CMakeLists.txt  icons.h  main.c  main.cpp  main.h
